WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190566
[iOS] Pressing forward delete key in text field does nothing and we should not invoke an editor action when forward delete is pressed outside a text field
https://bugs.webkit.org/show_bug.cgi?id=190566
Summary
[iOS] Pressing forward delete key in text field does nothing and we should no...
Daniel Bates
Reported
2018-10-14 15:29:38 PDT
Pressing the forward delete key in a text field does nothing on iOS. This is because in both Webkit Legacy and Modern WebKit we look expect the character string of the WebEvent for the forward delete key to be the character 0xF728. It isn’t. Once we fix that we should also ensure that we only perform a forward deletion when inside an editable field as it is not meaningful to perform a forward deletion when not focused in a text field.
Attachments
Patch and layout test
(8.38 KB, patch)
2018-11-07 09:30 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2018-10-14 15:32:00 PDT
Here is where we expect 0xF728 for the forward delete key in Modern WebKit: <
https://trac.webkit.org/browser/webkit/trunk/Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm?rev=237053#L3831
>.
Radar WebKit Bug Importer
Comment 2
2018-10-14 21:54:17 PDT
<
rdar://problem/45262367
>
Daniel Bates
Comment 3
2018-11-06 13:57:07 PST
***
Bug 191088
has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 4
2018-11-06 13:57:36 PST
You can observe the fact that forward delete does nothing by performing the following: 1. Visit <data:text/html,<textarea></textarea>>. 2. Focus the text area and type "ha". 3. Press the left arrow key. 4. Press the forward delete key. Then the text area should have the contents "h". But it has the contents "ha"; => nothing happened.
Daniel Bates
Comment 5
2018-11-06 13:59:01 PST
***
Bug 191087
has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 6
2018-11-07 09:30:10 PST
Created
attachment 354100
[details]
Patch and layout test
Daniel Bates
Comment 7
2018-11-09 09:06:53 PST
Comment on
attachment 354100
[details]
Patch and layout test Clearing flags on attachment: 354100 Committed
r238033
: <
https://trac.webkit.org/changeset/238033
>
Daniel Bates
Comment 8
2018-11-09 09:06:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug