[iOS] Pressing forward delete key in text field does nothing and we should not invoke an editor action when forward delete is pressed outside a text field https://bugs.webkit.org/show_bug.cgi?id=190566 <rdar://problem/45262367>

Reviewed by Wenson Hsieh.

Source/WebKit:

Override -_deleteForwardAndNotify to perform a forward deletion and remove the dead code that
expected UIKit to send us a character string with 0xF728 for the forward delete key. UIKit
ceased doing this many years ago. We may revist this decision once <rdar://problem/45772078>
is fixed.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _interpretKeyEvent:isCharEvent:]):
(-[WKContentView _deleteForwardAndNotify:]):

Source/WebKitLegacy/mac:

Remove dead code. UIKit ceased sending us a character string with 0xF728 for the forward delete
key many years ago. We will need to fix up iOS Legacy WebKit support for the forward delete key
in UIKit. We may revist this decision once <rdar://problem/45772078> is fixed.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _handleEditingKeyEvent:]):

LayoutTests:

Add a test to ensure that pressing the forward delete key deletes the next character.

* fast/events/ios/forward-delete-in-editable-expected.txt: Added.
* fast/events/ios/forward-delete-in-editable.html: Added.

Canonical link: https://commits.webkit.org/206247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238033 268f45cc-cd09-0410-ab3c-d52691b4dbfc